trunk/tests/simpl/negative/parse_errors/L1/semicolon_separator2.ob
(* According to the original grammar description, semicolon
   is statement separator, not statement terminator. *)

MODULE SemicolonSeparator;
	VAR
		foo: INTEGER
BEGIN
    foo := 10;
END SemicolonSeparator.
